--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author: MochaPenguin
 email: mochapenguin@gmail.com
 description: "My adventure through the world of technology." # You can edit this line in _config.yml. It will appear in your document head meta and in your feed.xml site description
 keywords: "MochaPenguin, blog"
-baseurl: "/blog" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://mochapenguin.github.io" # the base hostname & protocol for your site
 locale: en_GB
 
