--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 ### Site info:
 title: MochaPenguin's Musings
-tagline: MochaPenguin's Musings
+tagline: "My adventure through the world of technology."
 author: MochaPenguin
 email: mochapenguin@gmail.com
 description: "My adventure through the world of technology." # You can edit this line in _config.yml. It will appear in your document head meta and in your feed.xml site description
